<resources>
    <string name="app_name">MultiTests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_json">Json</string>

    <string name="home_second">Home Second</string>
    <string name="menu_wifi">Wifi</string>
    <string name="test_button_name">Click!</string>
    <string name="menu_draft">Draft</string>
    <string name="wifi_refresh_button_name">Refresh</string>
    <string name="wifi_activate_contentDescription">Activate State</string>

    <string name="frequency_with_unit">%d MHz</string>

    <string name="card_front_content_description">Front</string>
    <string name="hint_card_editText">Blabla</string>
    <string name="card_back_content_description">Back</string>

    <string name="write_button_label">Write</string>
    <string name="read_button_label">Read</string>
    <string name="hint_file_content_text">file content</string>
    <string name="question_hint">Question</string>
    <string name="answer_hint">Answer</string>
    <string name="menu_speech">Speech</string>
    <string name="description_speak_button">Speak!</string>
    <string name="description_listen_button">Listen!</string>
    <string name="pitch_label">Pitch</string>
    <string name="speed_label">Speed</string>

    <string name="navigate_button">Navigate</string>
</resources>
