<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_wifi"
            android:icon="@drawable/ic_menu_wifi"
            android:title="@string/menu_wifi" />
        <item
            android:id="@+id/nav_draft"
            android:icon="@drawable/ic_menu_draft"
            android:title="@string/menu_draft" />
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/ic_menu_card"
            android:title="Card"/>
        <item
            android:id="@+id/nav_json"
            android:icon="@drawable/ic_menu_json"
            android:title="@string/menu_json" />
        <item
            android:id="@+id/nav_speech"
            android:icon="@drawable/ic_menu_speech"
            android:title="@string/menu_speech" />
    </group>
</menu>
