<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="alo.android.multitests.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="alo.android.multitests.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="alo.android.multitests.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_wifi"
        android:name="alo.android.multitests.ui.wifi.WifiFragment"
        android:label="@string/menu_wifi"
        tools:layout="@layout/fragment_wifi" />

    <fragment
        android:id="@+id/nav_draft"
        android:name="alo.android.multitests.ui.draft.DraftFragment"
        android:label="@string/menu_draft"
        tools:layout="@layout/fragment_draft" >
        <action
            android:id="@+id/action_nav_draft_to_draftDetailsFragment"
            app:destination="@id/draftDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/draftDetailsFragment"
        android:name="alo.android.multitests.ui.draft.DraftDetailsFragment"
        android:label="fragment_draft_details"
        tools:layout="@layout/fragment_draft_details" />

    <fragment
        android:id="@+id/nav_json"
        android:name="alo.android.multitests.ui.json.JsonFragment"
        android:label="@string/menu_json"
        tools:layout="@layout/fragment_json" />

    <fragment
        android:id="@+id/nav_speech"
        android:name="alo.android.multitests.ui.speech.SpeechFragment"
        android:label="@string/menu_speech"
        tools:layout="@layout/fragment_speech" />

    <fragment
        android:id="@+id/nav_card"
        android:name="alo.android.multitests.ui.flipcard.FlipCardFragment"
        android:label="fragment_flipcard"
        tools:layout="@layout/fragment_flipcard" />

</navigation>
