<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".ui.speech.SpeechFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/speech_result_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="What do you want?" />

        <SeekBar
            android:id="@+id/pitch_seekBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:progress="50"
            app:layout_constraintStart_toEndOf="@+id/pitch_label"
            app:layout_constraintTop_toBottomOf="@+id/pitch_label" />

        <SeekBar
            android:id="@+id/speed_seekBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:progress="50"
            app:layout_constraintStart_toStartOf="@+id/pitch_seekBar"
            app:layout_constraintTop_toBottomOf="@+id/speed_label" />

        <ImageButton
            android:id="@+id/speak_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/description_speak_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_speak_button" />

        <ImageButton
            android:id="@+id/listen_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/description_listen_button"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/speak_imageButton"
            app:srcCompat="@drawable/ic_listen_button" />

        <TextView
            android:id="@+id/pitch_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/pitch_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speech_result_textView" />

        <TextView
            android:id="@+id/speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/speed_label"
            app:layout_constraintStart_toStartOf="@+id/pitch_label"
            app:layout_constraintTop_toBottomOf="@+id/pitch_seekBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
